--- a/sass/components/_portfolioHeader.scss
+++ b/sass/components/_portfolioHeader.scss
@@ -3,6 +3,6 @@
     align-items: center;
     justify-content: space-between;
     width: 1200px;
-    border-bottom: 1px solid var(--section-color);
+    border-bottom: 1px solid $section-color;
     margin: 0 auto
 }
