--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./utils/variables";
 @import "./utils/modern-normalise";
 @import "./utils/hidden";
+@import "./components/logo";
 
 @import "./base/base";
 
