--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -5,11 +5,12 @@
     text-align: center;
     line-height: 1.167;
     letter-spacing: 0.03em;
-    color: var(--title-text-color);
+    color: $title-text-color;
 }
 
 .about-list {
     display: flex;
+    
 }
 
 .about-list .item {
@@ -26,27 +27,27 @@
     position: absolute;
     align-items: center;
     background: rgba(47, 48, 58, 0.8);
-    left: 0;
-    bottom: 0;
+    bottom: 0px;
+    right: 0;
+    transform: translateY(-4px);
     width: 100%;
     height: 70px;
     justify-content: center;
-    color: var(--white-color);
+    color: $white-color;
 
+    & h3 {
+        display: block;
+        width: 100%;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14px;
+        line-height: 1.142px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
 
+    }
 
-}
-
-.about-txt h3 {
-    display: block;
-    width: 100%;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 1.142px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
 
 }
