--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -18,6 +18,8 @@
 
 .advantages-item {
     display: block;
+
+    
 }
 
 .advantages-item::before {
@@ -30,26 +32,26 @@
     background-position: center;
     border-radius: 4px;
     margin-bottom: 30px;
+    background-size: 70px;
 }
 
 .icon-antenna::before {
-    background-size: 70px;
     background-image: url(../images/icons/antenna.svg);
 
 }
 
 .icon-clock::before {
-    background-size: 70px;
+
     background-image: url(../images/icons/clock.svg);
 }
 
 .icon-diagram::before {
-    background-size: 70px;
+
     background-image: url(../images/icons/diagram.svg);
 }
 
 .icon-astronaut::before {
-    background-size: 70px;
+
     background-image: url(../images/icons/astronaut.svg);
 }
 
@@ -60,7 +62,7 @@
     line-height: 1.143;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--title-text-color);
+    color: $title-text-color;
     margin: 0;
     margin-bottom: 10px;
 }
