--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -7,18 +7,20 @@
     justify-content: center;
     margin: 0 auto;
     padding-bottom: 94px;
+
+     h2 {
+
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.1719;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: $title-text-color;
+        margin-bottom: 50px;
+    }
 }
 
-.regular-clients h2 {
 
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.1719;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-    margin-bottom: 50px;
-}
 
 .clients {
     display: flex;
@@ -28,12 +30,13 @@
 .client {
     width: calc((100% - 150px) / 6);
     height: 90px;
-    border: 1px solid var(--border-color);
+    border: 1px solid $border-color;
     border-radius: 4px;
     margin-right: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .client :last-child {
@@ -46,7 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    fill: var(--icon-color);
+    fill: $icon-color;
 
     transition-property: fill;
     transition-duration: 250ms;
@@ -58,7 +61,7 @@
 .client:hover,
 .client:focus,
 .client:hover svg,
-.client:focus svg {
-    border-color: var(--accent-color);
-    fill: var(--accent-color);
+.client:focus svg  {
+    border-color: $accent-color;
+    fill: $accent-color;
 }
