--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,6 +1,6 @@
 /* футер */
 footer {
-    background-color: var(--black-color);
+    background-color: $black-color;
 }
 
 .content {
@@ -19,52 +19,39 @@ footer {
 
 }
 
-.logo-link {
-    display: block;
-    margin-bottom: 20px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    color: var(--white-color);
 
-}
-
-.logo-link span {
-    color: var(--accent-color);
-    margin: 0px;
-}
 
 .contacts {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.174;
     letter-spacing: 0.03em;
-    color: var(--white-color);
+    color: $white-color;
     padding-bottom: 60px;
+
+    & a {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 1.72px;
+        letter-spacing: 0.03em;
+        color: $footer-w-color;
+        margin-bottom: 9px;
+
+    }
 }
 
 .contacts-list {
     margin-bottom: 9px;
 }
 
-.contacts a {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.72px;
-    letter-spacing: 0.03em;
-    color: var(--footer-w-color);
-    margin-bottom: 9px;
-}
 
 .address-item :last-child {
     margin-bottom: 0px;
 }
 
 .join {
-    /* display: block; */
+  
     justify-content: space-around;
     align-items: left;
 }
@@ -78,7 +65,7 @@ footer {
     line-height: 1.1429;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--white-color);
+    color: $white-color;
     margin-bottom: 20px;
 }
 
@@ -96,30 +83,37 @@ footer {
     width: 44px;
     height: 44px;
     border-radius: 50%;
-    background-color: var(--icon-bgc-footer);
+    background-color: $icon-bgc-footer;
     margin-right: 10px;
 
     transition-property: background;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0;
+    
+    &:hover, &:focus  {
+        background: $accent-color;
+    }
 }
 
 .icon {
     width: 20px;
     height: 20px;
     display: flex;
-    fill: var(--white-color);
+    fill: $white-color;
+
+
 }
 
-.footer-icon:hover,
-.footer-icon:focus {
-    background: var(--accent-color);
-}
 
 .subscription-form {
     display: block;
 
+}
+
+.subscription {
+    display: flex;
+    position: relative;
 }
 
 .subscription-h {
@@ -130,37 +124,26 @@ footer {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 20px;
+    color: $white-color;
 }
 
-.subscription {
-    display: flex;
-    position: relative;
-}
 
 .subscription-input {
     display: flex;
     width: 358px;
     height: 50px;
     margin-right: 12px;
-    background-color: var(--black-color);
+    padding-left: 16px;
+    background-color: $black-color;
     font-weight: normal;
     font-size: 16px;
     line-height: 20px;
-    color: var(--footer-w-color);
+    color: $footer-w-color;
     border: 1px solid rgba(255, 255, 255, 0.3);
     box-sizing: border-box;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
 
-
-
-}
-
-.subscription-input+span {
-    position: absolute;
-    top: 16px;
-    left: 15px;
-    /* transform: translateY(50%); */
 
 
 }
@@ -175,8 +158,8 @@ footer {
     letter-spacing: 0.06em;
     font-size: 16px;
     line-height: 1.875;
-    color: var(--white-color);
-    background-color: var(--accent-color);
+    color: $white-color;
+    background-color: $accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 
