--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,18 +1,14 @@
 
 .header-box {
-display: flex;
-align-items: center;
-justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 width: 1200px;
 margin: 0 auto;
 
+
 }
 
-.list,
-.nav-item {
-    list-style: none;
-    text-decoration: none;
-}
 
 .menu {
     display: flex;
@@ -23,17 +19,20 @@ margin: 0 auto;
 .nav-list {
     display: flex;
     margin-left: 93px;
+
+    & .item.curent ::after {
+        content: "";
+        width: inherit;
+        height: 4px;
+        background: $accent-color;
+        border-radius: 2px;
+        display: flex;
+        margin-top: 27px;
+    }
+
 }
 
-.nav-list .item.curent ::after {
-    content: "";
-    width: inherit;
-    height: 4px;
-    background: var(--accent-color);
-    border-radius: 2px;
-    display: flex;
-    margin-top: 27px;
-}
+
 
 .nav-list .item+.item {
     margin-left: 50px;
@@ -47,39 +46,46 @@ margin: 0 auto;
     font-weight: 500;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--title-text-color);
+    color: $title-text-color;
 
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0;
+
+    &:hover,
+    &:focus {
+    color: $accent-color;
+    }
 }
 
-.nav-item:hover,
-.nav-item:focus {
-    color: var(--accent-color);
-}
 
 .address {
     display: flex;
     margin-left: auto;
+
+    & li {
+        display: flex;
+        align-items: center;
+    
+    }
+    & a {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.142px;
+        letter-spacing: 0.02em;
+        color: $primari-text-color;
+    
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-delay: 0;
+    }
 }
 
 
-.address a {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.142px;
-    letter-spacing: 0.02em;
-    color: var(--primari-text-color);
-
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
-}
 
 .address .item:not(:last-child) {
     margin-right: 50px;
@@ -89,22 +95,17 @@ margin: 0 auto;
 .address-item:focus,
 .address-item:hover svg,
 .address-item:focus svg {
-    color: var(--accent-color);
-    fill: var(--accent-color);
+    color: $accent-color;
+    fill: $accent-color;
 }
 
 
 
-.address li {
-    display: flex;
-    align-items: center;
-
-}
 
 .icon-address {
     display: inline-block;
     margin-right: 10px;
-    fill: var(--primari-text-color);
+    fill: $primari-text-color;
 
     transition-property: color, transform;
     transition-duration: 250ms;
