--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -5,8 +5,8 @@
     padding-bottom: 200px;
     max-width: 1600px;
     margin: 0 auto;
-    background-color: var(--black-color);
-    color: var(--white-color);
+    background-color: $black-color;
+    color: $white-color;
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
@@ -28,13 +28,13 @@
 
 .hero .hero-btn {
     font: roboto;
-    background-color: var(--accent-color);
-    color: var(--white-color);
-    border: 1px solid var(--accent-color);
+    background-color: $accent-color;
+    color:$white-color;
+    border: 1px solid $accent-color;
     border-radius: 4px;
     padding: 10px 32px;
     height: 50px;
-    box-shadow: 0px 4px 4px var(--shadow-color);
+    box-shadow: 0px 4px 4px $shadow-color;
     font-weight: bold;
     font-size: 16px;
     line-height: 1.875;
@@ -45,16 +45,15 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0;
 
+    &:focus, 
+    &:hover {
+        font: roboto;
+        background-color: $white-color;
+        color: $accent-color;
+        border: 1px solid $white-color;
+        cursor: pointer;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
+
 }
 
-.hero-btn:hover,
-.hero-btn:focus,
-.filter .btn:hover,
-.filter .btn:focus {
-    font: roboto;
-    background-color: var(--white-color);
-    color: var(--accent-color);
-    border: 1px solid var(--white-color);
-    cursor: pointer;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
