--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,7 +4,7 @@
     left: 0%;
     width: 100%;
     height: 100%;
-    background-color: var(--shadow-color);
+    background-color:$shadow-color;
 }
 
 .backdrop.is-hidden {
@@ -19,7 +19,7 @@
     transform: translate(-50%, -50%);
     width: 528px;
     height: 581px;
-    background-color: var(--white-color);
+    background-color: $white-color;
 }
 
 .close {
@@ -29,30 +29,35 @@
     margin-top: 8px;
     margin-right: 8px;
     margin-left: auto;
-    border: 1px solid var(--section-color);
+    border: 1px solid $section-color;
     border-radius: 50%;
     background-color: transparent;
+
+    svg {
+        width: 16px;
+        height: 16px;
+        fill: $black-color;
+        justify-content: center;
+        margin: auto;
+    }
+
 }
 
-.close svg {
-    width: 16px;
-    height: 16px;
-    fill: var(--black-color);
-    justify-content: center;
-    /* align-items: center; */
-    margin: auto;
-}
+
+
 
 .close:hover svg,
 .close:focus svg {
-    fill: var(--accent-color);
+    fill: $accent-color;
     cursor: pointer;
 }
+
+
 
 /* форма модалки */
 
 .form-box h2 {
-    color: var(--title-text-color);
+    color: $title-text-color;
     font-size: 20px;
     line-height: 1.15;
     text-align: center;
@@ -64,7 +69,7 @@
     margin-right: 40px;
     margin-bottom: 30px;
     margin-left: 40px;
-    color: var(--primari-text-color);
+    color: $primari-text-color;
 
 }
 
@@ -78,6 +83,15 @@
     flex-direction: column;
     margin-bottom: 10px;
     position: relative;
+
+    svg {
+        position: absolute;
+        fill: $title-text-color;
+        bottom: 13.5px;
+        left: 12px;
+        width: 18px;
+        height: 18px;
+    }
 }
 
 .intyt-name-h {
@@ -100,22 +114,17 @@
     border-radius: 4px;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
 }
 
-.intut-data svg {
-    position: absolute;
-    fill: var(--main-text-color);
-    bottom: 13.5px;
-    left: 12px;
-    width: 18px;
-    height: 18px;
-}
+
 
 .text-data:focus,
 .text-data:hover,
 .comment:focus,
 .comment:hover {
-    border-color: var(--accent-color);
+    border-color: $accent-color;
     outline: none;
     cursor: pointer;
     transition-duration: 250ms;
@@ -123,7 +132,7 @@
 }
 
 .text-data:focus+.form-icon {
-    fill: var(--accent-color);
+    fill: $accent-color;
 }
 
 .comment {
@@ -131,7 +140,7 @@
     font-size: 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    color: var(--primari-text-color);
+    color: $primari-text-color;
     width: 448px;
     padding: 12px 16px;
 
@@ -140,13 +149,17 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+    .licenz {
+color: $primari-text-color;
+    }
+
 .contract {
     /* display: flex; */
     justify-content: start;
     font-size: 14px;
     line-height: 1.714;
     letter-spacing: 0.03em;
-    color: var(--primari-text-color);
+    
 
 }
 
@@ -158,8 +171,8 @@
 }
 
 .link-contract {
-    color: var(--accent-color);
-    text-decoration-color: var(--accent-color);
+    color: $accent-color;
+    text-decoration-color: $accent-color;
 }
 
 .checkbox-svg {
@@ -169,7 +182,8 @@
 }
 
 .checkbox-input:checked+.checkbox-svg {
-    background-color: var(--accent-color);
+    background-color: $accent-color;
+    border-color: transparent;
 }
 
 .form-btn {
@@ -177,19 +191,19 @@
     font-weight: bold;
     font-size: 16px;
     line-height: 1.875;
-    color: var(--white-color);
-    background-color: var(--accent-color);
-    border-color: var(--accent-color);
+    color: $white-color;
+    background-color: $accent-color;
+    border-color: $accent-color;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
 }
 
-.container {
-    display: flex;
-    width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
-    justify-content: center;
-    margin: 0 auto;
-    padding-bottom: 94px;
-}
+// .container {
+//     display: flex;
+//     width: 1200px;
+//     padding-right: 15px;
+//     padding-left: 15px;
+//     justify-content: center;
+//     margin: 0 auto;
+//     padding-bottom: 94px;
+// }
