--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     margin-bottom: 34px;
 
-    color: var(--title-text-color);
+    color: $title-text-color;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.625;
@@ -26,14 +26,14 @@
     display: block;
     margin-right: 8px;
     border-radius: 4px;
-    color: var(--title-text-color);
-    background-color: var(--section-color);
+    color: $title-text-color;
+    background-color: $section-color;
 }
 
 .filter-btn.anchor {
-    color: var(--title-text-color);
-    background-color: var(--section-color);
-    border: 1px solid var(--section-color);
+    color: $title-text-color;
+    background-color: $section-color;
+    border: 1px solid $section-color;
     border-radius: 4px;
     padding: 6px 22px;
 
@@ -48,11 +48,122 @@
 
 .filter-btn:hover,
 .filter-btn:focus {
-    color: var(--white-color);
-    background-color: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    color: $white-color;
+    background-color: $accent-color;
+    border: 1px solid $accent-color;
+    
+}
+
+.filter .btn:hover,
+.filter .btn:focus {
+    font: Roboto;
+    background-color:$white-color;
+    color: $accent-color;
+    border: 1px solid $white-color;
+    
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .filter .filter-btn :not(:last-child) {
     margin-right: 8px;
 }
+
+.examples {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: auto;
+    margin-left: auto;
+    width: 1200px;
+    padding-top: 34px;
+    padding-bottom: 94px;
+}
+
+
+.examples .examples-card:not(:nth-child(3n)) {
+    margin-right: 30px;
+
+}
+
+.examples .examples-card:nth-child(n + 3) {
+    margin-bottom: 30px;
+}
+
+.examples-card {
+    display: block;
+    position: relative;
+    width: 370px;
+
+    margin-bottom: 30px;
+    border: 1px solid $section-color;
+
+    &:hover,
+   &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+            0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+
+    }
+}
+
+
+
+
+.examples-photo {
+
+    position: relative;
+    overflow: hidden;
+}
+
+
+.card-txt {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-right: 24px;
+    padding-left: 24px;
+}
+
+.card-txt h3 {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: $title-text-color;
+}
+
+.card-link {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.875;
+    letter-spacing: 0.03em;
+    color: $primari-text-color;
+}
+
+.overlay {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    top: 0%;
+    left: 0%;
+    text-align: center;
+    opacity: 0;
+    padding: 63px 24px;
+    background-color: $accent-color;
+    color: $white-color;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    .examples-card:hover & {
+    opacity: 1;
+    transform: translateY(0);
+
+}
+}
+
+
+
