--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./utils/modern-normalise";
 @import "./utils/hidden";
 @import "./components/logo";
+@import "./utils/fonts";
 
 @import "./base/base";
 
