--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,6 +1,6 @@
 /* наша команда */
 .team {
-    background-color: var(--section-color);
+    background-color: $section-color;
     padding-top: 94px;
 }
 
@@ -11,7 +11,7 @@
 .team-card {
     width: 270px;
     margin-right: 30px;
-    background-color: var(--white-color);
+    background-color: $white-color;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -88,6 +88,7 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0;
+
 
 }
 
