--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,10 @@
 @import "./utils/variables";
 @import "./utils/modern-normalise";
 @import "./utils/hidden";
-@import "./components/logo";
 @import "./utils/fonts";
+@import "./utils/placeholder";
+
+@import "./components/logo";
 
 @import "./base/base";
 
