--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,5 @@
 body {
-    color: var(--primari-text-color);
+    color: $primari-text-color;
     font-family: 'Roboto', sans-serif;
     list-style: none;
     text-decoration: none;
