--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -10,23 +10,44 @@
 .advantages-list {
     display: flex;
     justify-content: space-around;
+
+    & li:not(:last-child) {
+        margin-right: 30px;
+    }
 }
 
-.advantages-list li:not(:last-child) {
-    margin-right: 30px;
-}
+
 
 .advantages-item {
     display: block;
 
-    
+    & h3 {
+         font-weight: 700;
+         font-size: 14px;
+         line-height: 1.143;
+         letter-spacing: 0.03em;
+         text-transform: uppercase;
+         color: $title-text-color;
+         margin: 0;
+         margin-bottom: 10px;
+     }
+
+     & p {
+         font-weight: 400;
+         font-size: 14px;
+         line-height: 1.714;
+         letter-spacing: 0.03em;
+         margin: 0;
+
+     }
+
 }
 
 .advantages-item::before {
     display: block;
     height: 120px;
     content: '';
-    background: var(--section-color);
+    background: $section-color;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -56,22 +77,4 @@
 }
 
 
-.advantages-item h3 {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.143;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: $title-text-color;
-    margin: 0;
-    margin-bottom: 10px;
-}
 
-.advantages-item p {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.714;
-    letter-spacing: 0.03em;
-    margin: 0;
-
-}
