--- a/sass/components/_examples.scss
+++ b/sass/components/_examples.scss
@@ -1,6 +1,5 @@
 .cards {
-    display: flex;
-    justify-content: center;
+@extend %centered;
 
 }
 
@@ -30,7 +29,7 @@
     width: 370px;
 
     margin-bottom: 30px;
-    border: 1px solid var(--section-color);
+    border: 1px solid $section-color;
 }
 
 .examples-card:hover,
@@ -58,8 +57,8 @@
     text-align: center;
     opacity: 0;
     padding: 63px 24px;
-    background-color: var(--accent-color);
-    color: var(--white-color);
+    background-color: $accent-color;
+    color: $white-color;
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
@@ -88,7 +87,7 @@
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
-    color: var(--title-text-color);
+    color: $title-text-color;
 }
 
 .card-link {
@@ -96,5 +95,5 @@
     font-size: 16px;
     line-height: 1.875;
     letter-spacing: 0.03em;
-    color: var(--primari-text-color);
+    color: $primari-text-color;
 }
