--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -150,22 +150,21 @@ footer {
 
 
 .subscription-btn {
-    align-items: center;
-    text-align: center;
+    @extend %btn;
+
+display: inline-flex;
+text-align: center;
 
     padding-left: 28px;
     padding-right: 28px;
-    letter-spacing: 0.06em;
-    font-size: 16px;
-    line-height: 1.875;
-    color: $white-color;
-    background-color: $accent-color;
+
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
+
 
 }
 
 .icon-send {
     width: 24px;
     height: 24px;
+    margin-left: 10px;
 }
