--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,11 +1,10 @@
 .portfolio {
     display: flex;
-    padding-bottom: 94px;
+    justify-content: center;
+    
     width: 1200px;
     padding-top: 94px;
-    /* padding-right: 15px;
-    padding-left: 15px; */
-    justify-content: center;
+    padding-bottom: 94px;
     margin: 0 auto;
     flex-wrap: wrap;
 }
@@ -20,15 +19,17 @@
     font-size: 16px;
     line-height: 1.625;
     letter-spacing: 0.03em;
+
+    &-item {
+        display: block;
+        margin-right: 8px;
+        border-radius: 4px;
+        color: $title-text-color;
+        background-color: $section-color;
+    }
 }
 
-.filter-item {
-    display: block;
-    margin-right: 8px;
-    border-radius: 4px;
-    color: $title-text-color;
-    background-color: $section-color;
-}
+
 
 .filter-btn.anchor {
     color: $title-text-color;
@@ -51,19 +52,12 @@
     color: $white-color;
     background-color: $accent-color;
     border: 1px solid $accent-color;
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     
 }
 
-.filter .btn:hover,
-.filter .btn:focus {
-    font: Roboto;
-    background-color:$white-color;
-    color: $accent-color;
-    border: 1px solid $white-color;
-    
-    cursor: pointer;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+
 
 .filter .filter-btn :not(:last-child) {
     margin-right: 8px;
