--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,10 +1,6 @@
  .section-h {
-    font-weight: 700;
-    font-size: 36px;
-    margin-bottom: 50px;
+     @extend %h2;
     text-align: center;
-    line-height: 1.167;
-    letter-spacing: 0.03em;
     color: $title-text-color;
 }
 
@@ -38,13 +34,8 @@
     & h3 {
         display: block;
         width: 100%;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 14px;
-        line-height: 1.142px;
+        @extend %h3;
         text-align: center;
-        letter-spacing: 0.03em;
         text-transform: uppercase;
 
     }
