--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -22,10 +22,7 @@
     display: block;
 
     & h3 {
-         font-weight: 700;
-         font-size: 14px;
-         line-height: 1.143;
-         letter-spacing: 0.03em;
+        @extend %h3;
          text-transform: uppercase;
          color: $title-text-color;
          margin: 0;
@@ -33,12 +30,8 @@
      }
 
      & p {
-         font-weight: 400;
-         font-size: 14px;
-         line-height: 1.714;
-         letter-spacing: 0.03em;
+        @extend %ap;
          margin: 0;
-
      }
 
 }
