--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -15,10 +15,7 @@
     margin-bottom: 34px;
 
     color: $title-text-color;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    letter-spacing: 0.03em;
+    @extend %filter-txt;
 
     &-item {
         display: block;
@@ -38,12 +35,8 @@
     border-radius: 4px;
     padding: 6px 22px;
 
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
+    @extend %filter-txt;
     text-align: center;
-    letter-spacing: 0.03em;
 
 }
 
