--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -27,3 +27,49 @@
      line-height: 1.875;
     letter-spacing: 0.06em;
 }
+
+%h2 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.167;
+    letter-spacing: 0.03em;
+
+}
+
+%h3 {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.03em;
+
+}
+
+%card-des {
+    font-family: Roboto;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.187;
+    letter-spacing: 0.03em;
+
+}
+
+%ap{
+    font-family: Roboto;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.72px;
+    letter-spacing: 0.03em;
+
+}
+
+%filter-txt {
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.625;
+        letter-spacing: 0.03em;
+}
